refactor: Update doFilterInternal method